client tests 1
